# Rust_Vulkan

./: .gitignore  Cargo.toml  README.md  build.rs
obj_3d/car/: Car.mtl  README.md
shaders/: imgui.frag  imgui.vert  light.frag  light.vert  light_shadows.frag  light_shadows.vert  shadows.frag  shadows.vert  sphere.frag  vert.vert
src/: main.rs  window.rs
src/scenes/: mod.rs
src/scenes/common/: frame_resources.rs  init.rs  render_frame.rs  renderable_object.rs  update.rs
src/scenes/dynamic/: frame_resources.rs  init.rs  mod.rs  render_frame.rs  renderable_object.rs  shutdown.rs  update.rs
src/scenes/lighting/: frame_resources.rs  objects.rs  uniform.rs  update.rs
src/scenes/shadows/: frame_resources.rs  mod.rs  objects.rs  uniform.rs  update.rs
src/scenes/sphere/: frame_resources.rs  init.rs  mod.rs  objects.rs  render_frame.rs  shutdown.rs  uniform.rs  update.rs
src/vulkan_wr/: ImGui_wr.rs  app.rs  command_buffer.rs  command_pool.rs  core.rs  device.rs  fence.rs  framebuffer.rs  instance.rs  mod.rs  render_func.rs  render_pass.rs  renderable_traits.rs  sampler.rs  semaphore.rs  shader.rs  swapchain.rs  texture.rs  vertex.rs
src/vulkan_wr/buffer/: buffer.rs  buffer_view.rs  mod.rs
src/vulkan_wr/command_pb/: command_buffer.rs  command_pool.rs  mod.rs
src/vulkan_wr/descriptor/: descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  mod.rs
src/vulkan_wr/image/: image.rs  image_view.rs  mod.rs
src/vulkan_wr/pipeline/: mod.rs  pipeline.rs  pipeline_layout.rs
src/vulkan_wr/render_pass/: mod.rs  pass.rs  subpass.rs
(+8 files in other folders)
