[package]
name = "computer_graphics"
version = "1.1.0"
edition = "2024"
authors = ["DeZtrOiD"]
build = "build.rs"

[dependencies]
ash = {version = "0.38.0"}
glfw = { version = "0.60.0", features = ["vulkan"] }
imgui = "0.12.0"
image = "0.25.9"
tobj = "4.0.3"

[features]
default = ["scene2"]
scene1 = []
scene2 = []
scene3 = []
